--- a/css/register.css
+++ b/css/register.css
@@ -1,15 +1,15 @@
 
 .form-container{
-    position:absolute;
-    top: 15vh;
+    position: absolute;
+    top: 6vh;
+    width: 877px;
+    padding: 48px;
+    right: 100px;
     background: #fff;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px #000;
+    box-shadow: 0px 0px 10px 0px #000
 }
-.vv{
-    display: flex;
-    justify-content: space-between;
-}
+
 @media only screen and (max-width:678px) {
     .tt{
         background-size: 500%;
@@ -19,7 +19,20 @@
     padding: 40px;
 }
 h1{
-    color: rgb(80, 227, 250);
+    color: rgb(13, 9, 252);
+}
+.h2 ,h2 {
+    text-align: center;
+    color: rgb(13, 9, 252);
+}
+.h4 ,h4 {
+    text-align: center;
+    color: rgba(9, 209, 240, 0.934);
+    font-size: 150px;
+}
+.h3 ,h3 {
+    font-size: 300px;
+ color:  hotpink;
 }
 .kk{
     color: white;
